Updates from ShareLaTeX

--- a/Project1/report/ms.tex
+++ b/Project1/report/ms.tex
@@ -163,11 +163,13 @@ Since we are considering fixed end points for $u$ we do not include $i = 0$ and 
 \begin{deluxetable}{lccc}
 %\tablewidth{0pt}
 \tablecaption{\label{tab:results}}
-\tablecomments{This table contains average CPU times for all the algorithms}
+\tablecomments{This table contains average CPU times for all the algorithms, n = 10^{6}}
 \tablecolumns{4}
-\tablehead{Column 1  & Column 2 & Column 3 & Column 4}
+\tablehead{ & General & Taylored & Algorithm 3}
 \startdata
-Item 1 & Item 2 & Item 3 & Item 4
+Highest & Item 2 & Item 3 & Item 4 \\
+Lowest & Item 2 & Item 3 & Item 4 \\
+Average & Item 2 & Item 3 & Item 4 
 \enddata
 \end{deluxetable}
 
