Updates from ShareLaTeX

--- a/Project1/report/ms.tex
+++ b/Project1/report/ms.tex
@@ -163,9 +163,9 @@ Since we are considering fixed end points for $u$ we do not include $i = 0$ and 
 \begin{deluxetable}{lccc}
 %\tablewidth{0pt}
 \tablecaption{\label{tab:results}}
-\tablecomments{This table contains average CPU times for all the algorithms, n = 10^{6}}
+\tablecomments{This table contains highest, lowest and average measured CPU times for the different algorithms used at n = 10^{6}}
 \tablecolumns{4}
-\tablehead{ & General & Taylored & Algorithm 3}
+\tablehead{ & General & Taylored & Armadillo}
 \startdata
 Highest & Item 2 & Item 3 & Item 4 \\
 Lowest & Item 2 & Item 3 & Item 4 \\
