Updates from ShareLaTeX

--- a/Project2/Project2.tex
+++ b/Project2/Project2.tex
@@ -27,8 +27,17 @@
 \label{sec:introduction}
 
 
+
 \section{Method}
 \label{sec:method}
+\subsection{Buckling beam}
+Considering a beam that is fastened in both ends which moves up and down when a force F is exerted on it can be described by a differential equation
+%
+\begin{gather}
+    \gamma \frac{d²u(x)}{dx²} = -Fu(x),
+\end{gather}
+%
+where $u(x)$ is the displacement of the beam in the y-direction and $\gamma$ is a constant that is defined by the properties of the beam, such as the rigidity. Since the beam is fastened in both ends, the displacement $u(x) = 0$ and the sum outer forces on the beam is zero. 
 
 
 \section{Data}
