--- a/Project2/report/Project2.tex
+++ b/Project2/report/Project2.tex
@@ -92,7 +92,7 @@ Solving the eigenvalue problem with Jacobi's method means solving an equation on
     \boldsymbol{S}^T\boldsymbol{A}\boldsymbol{S} = \boldsymbol{R},
 \end{gather}
 %
-where $\boldsymbol{S}$ is an orthogonal matrix, so it has the property $\boldsymbol{S}^{-1} = \boldsymbol{S}^T$. The resulting matrix $\boldsymbol{R}$ will consist of the eigenvectors, which together with the eigenvalues makes up the eigenpairs of the buckling beam problem. The matrix $\boldsymbol{S}$ is such that the elements 
+where $\boldsymbol{S}$ is an orthogonal matrix, so it has the property $\boldsymbol{S}^{-1} = \boldsymbol{S}^T$. The resulting matrix $\boldsymbol{R}$ will consist of the eigenvectors, which together with the eigenvalues makes up the eigenpairs of the buckling beam problem. The matrix $\boldsymbol{S}$ is such that the elements along the diagonal are 1, and zero elsewhere, except four elements that are decided by the largest element of the off diagonal of $\boldsymbol{A}$. The four elements mentioned rotates $\boldsymbol{A}$ an angle $\theta$ in the Euclidean n-dimensional space. The largest element of $\boldsymbol{A}$ is found at a position $(k,l)$, and these indices are used to define the position of the mentioned four elements of $\boldsymbol{}$
 
 
 
