--- a/Project2/report/Project2.tex
+++ b/Project2/report/Project2.tex
@@ -34,6 +34,58 @@
 
 \section{Method}
 \label{sec:method}
+The method presented will show how to solve an eigenvalue problem using Jacobi's method. The first problem is a classical one involving a beam fastened in both ends. Further the method is transformed to a quantum mechanical three dimensional quantum dot problem, starting with one electron and moving over to two electrons.
+
+\subsection{Jacobi's method for solving an eigenvalue problem}
+Solving the eigenvalue problem with Jacobi's method means solving an equation on the form
+%
+\begin{gather}\label{eq:B=SAS}
+    \bold{S}^T\bold{A}\bold{S} = \bold{B},
+\end{gather}
+%
+where $\bold{S}$ is an orthogonal matrix, so it has the property $\bold{S}^{-1} = \bold{S}^T$. The resulting matrix $\bold{B}$ will consist of the eigenvalues along the diagonal. The matrix $\bold{S}$ is such that the elements along the diagonal are 1, and zero elsewhere, except four elements which are such that their position are decided by the largest element of the off-diagonal of $\bold{A}$. The largest element of $\bold{A}$ is found at a position $(k,l)$, and these indices are used to define the position of the mentioned four elements of $\bold{S}$, which are such that $s_{kk} = s_{ll} = \cos\theta$ and $s_{kl} = -s_{lk} = -\sin\theta$. This is considered as a rotation of an angle $\theta$ in the n-dimensional Euclidean space. When solving \eqref{eq:B=SAS} the resulting equations to solve are
+%
+\begin{align*}
+    &b_{ii} = a_{ii}, i \neq k, i \neq l \\
+    &b_{ik} = a_{ik}c - a_{il}s, i\neq k, i\neq l \\
+    &b_{il} = a_{il}c + a_{ik}s, i \neq k, i\neq l \\
+    &b_{kk} = a_{kk} c^2 - 2a_{kl}cs+ a_{ll}s^2 \\
+    &b_{ll} = a_{ll} c^2 + 2a_{kl}cs a_{kk}s^2 \\
+    &b_{kl} = \left(a_{kk} - a_{ll}\right)cs + a_{kl}\left(c^2 - s^2\right),
+\end{align*}
+where $c = \cos\theta$ and $s = \sin\theta$. The main goal is to reduce the off-diagonal elements of $\bold{A}$ to zero in such a way that $\bold{B}$ has the eigenvalues along the diagonal, the reduction of the elements is done by choosing the angle $\theta$. We make a requirement that the off-diagonal elements of $\bold{B}$ is zero;
+%
+\begin{align*}
+    b_{kl} &= 0 = \left(a_{kk} - a_{ll}\right)cs + a_{kl} \left(c^2 - s^2\right),
+\end{align*}
+%
+which can then be written as
+%
+\begin{gather*}
+    \frac{\left(a_{ll} - a_{kk}\right)}{a_{kl}}cs = \left(c^2 - s^2\right).
+\end{gather*}
+%
+Defining $\tau = \left(a_{ll} - a_{kk}\right)/2a_{kl}$ and $\tan\theta = t = s/c$, and multiplying the equation above by $1/c^2$ we obtain a quadratic equation 
+%
+\begin{gather*}
+    t^2 + 2\tau t - 1 = 0,
+\end{gather*}
+%
+which is used to define the best fit $\theta$ to reduce the off-diagonal elements of $\bold{A}$. The solution to the quadratic equation is $t = -\tau \pm \sqrt{1 + \tau^2}$. If $\tau$ becomes large, the numerical accuracy will drop, as $t \approx -\tau \pm \tau$. By the following multiplication
+%
+\begin{align*}
+    t_{\pm} &= -\tau \pm \sqrt{1+\tau^2}\left(\frac{\tau \pm \sqrt{1+\tau^2}}{\tau \pm \sqrt{1+\tau^2}}\right) \\
+    &= \frac{-\tau^2 + \left(1 + \tau^2\right)}{\tau \pm \sqrt{1 + \tau^2}} = \frac{1}{\tau \pm \sqrt{1+\tau^2}}.
+\end{align*}
+%
+the issue of numerical accuracy is avoided by splitting the equation such that when $\tau < 0$ we choose the negative sign in front of the square root.
+
+ 
+\subsubsection{Numerical implementation}
+When implementing Jacobi's method numerically, $\bold{B}$ is not explicitly created, instead the elements of $\bold{A}$ are changed during each iteration. This allows the program to run with large matrices (large n), without taking up more memory thasn needed. This means the left hand side of the six previous equations are changed so that they are valid for the elements of $\bold{A}$ instead of $\bold{B}$, meaning $b_{ii} \rightarrow a_{ii}$, $b_{ik} \rightarrow a_{ik}$ and so forth.
+
+///EIGENVECTORS////
+
 \subsection{Buckling beam}
 Considering a beam that is fastened in both ends which moves up and down when a force F is exerted on it can be described by a differential equation
 %
@@ -85,26 +137,8 @@ Where a and b are defined as $a = -1/h^2$ and $b = 2/h^2$. For this eigenvalue p
 \end{gather}
 for $j = 1,2,...,n-1$. 
 
-\subsubsection{Jacobi's method for solving an eigenvalue problem}
-Solving the eigenvalue problem with Jacobi's method means solving an equation on the form
-%
-\begin{gather}\label{eq:B=SAS}
-    \boldsymbol{S}^T\boldsymbol{A}\boldsymbol{S} = \boldsymbol{R},
-\end{gather}
-%
-where $\boldsymbol{S}$ is an orthogonal matrix, so it has the property $\boldsymbol{S}^{-1} = \boldsymbol{S}^T$. The resulting matrix $\boldsymbol{R}$ will consist of the eigenvectors, which together with the eigenvalues makes up the eigenpairs of the buckling beam problem. The matrix $\boldsymbol{S}$ is such that the elements along the diagonal are 1, and zero elsewhere, except four elements that are decided by the largest element of the off diagonal of $\boldsymbol{A}$. The largest element of $\boldsymbol{A}$ is found at a position $(k,l)$, and these indices are used to define the position of the mentioned four elements of $\boldsymbol{S}$, which are such that $s_{kk} = s_{ll} = \cos\theta$ and $s_{kl} = -s_{lk} = -\sin\theta$. This is considered as a rotation of an angle $\theta$ in the n-dimensional Euclidean space. When solving \eqref{eq:B=SAS} the resulting equations to solve are
-%
-\begin{align*}
-    &r_{ii} = a_{ii}, i \neq k, i \neq l \\
-    &r_{ik} = a_{ik}\cos\theta - a_{il}\sin\theta, i\neq k, i\neq l \\
-    &r_{il} = a_{il}\cos\theta + a_{ik}\sin\theta, i \neq k, i\neq l \\
-    &r_{kk} = a_{kk} \cos^2\theta - 2a_{kl}\cos\theta\sin\theta+ a_{ll}\sin^2\theta \\
-    &r_{ll} = a_{ll} \cos^2\theta+ 2a_{kl}\cos\theta\sin\theta a_{kk}\sin^2\theta \\
-    &r_{kl} = \left(a_{kk} - a_{ll}\right)\cos\theta\sin\theta + a_{kl}\left(\cos^2\theta - \sin^2\theta\right),
-\end{align*}
-which makes up the $\boldsymbol{R}$, which consists of the eigenvectors of $\boldsymbol{A}$. 
 
-For the implimentation of Jacobi's method 
+
 
 
 
