--- a/Project2/report/Project2.tex
+++ b/Project2/report/Project2.tex
@@ -195,17 +195,42 @@ where the boundary conditions of $u$ are $u(0) = u(\infty) = 0$. Defining a dime
 Multiplying the above equation by $2m\alpha^2 / \hbar^2$
 %
 \begin{equation*}
-    -\frac{d^2u(\rho)}{d\rho^2} + \frac{mk}{\hbar^2}\alpha^2 \rho^2u(\rho) = \frac{2m\alpha^2}{\hbar^2}
+    -\frac{d^2u(\rho)}{d\rho^2} + \frac{mk}{\hbar^2}\alpha^4 \rho^2u(\rho) = \frac{2m\alpha^2}{\hbar^2}Eu(\rho).
 \end{equation*}
+%
+To transform the equation to a form such that it can be solved as an eigenvalue problem $\alpha$ is fixed such that
+%
+\begin{equation*}
+    
+\end{equation*}
+%
 
 \section{Results}
 \label{sec:results}
 
 \subsection{Jacobi's method}
 
+\begin{figure}[t]
+\mbox{\epsfig{figure=iterationspersize.pdf,width=\linewidth,clip=}}
+\caption{Logarithmic plot of }
+\label{fig:fig1}
+\end{figure}
+
 \subsection{Quantum dots, single electron}
 
+\begin{figure}[t]
+\mbox{\epsfig{figure=GSEperOMGr.pdf,width=\linewidth,clip=}}
+\caption{}
+\label{fig:fig2}
+\end{figure}
+
 \subsection{Quantum dots, two electrons}
+
+\begin{figure}[t]
+\mbox{\epsfig{figure=ProbfuncperRhon.pdf,width=\linewidth,clip=}}
+\caption{Logarithmic plot of }
+\label{fig:fig3}
+\end{figure}
 
 \section{Conclusions}
 \label{sec:conclusions}
