Updates from ShareLaTeX

--- a/Project2/report/Project2.tex
+++ b/Project2/report/Project2.tex
@@ -242,7 +242,7 @@ which has known analytical eigenvalues for the ground state (with $l=0)$ $\lambd
 \subsection{Quantum dots, two electrons}
 
 \begin{figure}[t]
-\mbox{\epsfig{figure=ProbfuncperRhon.pdf,width=\linewidth,clip=}}
+\mbox{\epsfig{figure=ProbfuncperRhons16.pdf,width=\linewidth,clip=}}
 \caption{Logarithmic plot of }
 \label{fig:fig3}
 \end{figure}
